--- a/LA/css/freelancer.css
+++ b/LA/css/freelancer.css
@@ -195,6 +195,8 @@ section.success {
 #portfolio .portfolio-item {
   margin: 0 0 15px;
   right: 0;
+  height: 250px;
+  overflow: hidden;
 }
 #portfolio .portfolio-item .portfolio-link {
   display: block;
